# claudecode-telegram

./: .dockerignore  CLAUDE.md  DOC.md  Dockerfile  FEATURES.md  LICENSE  README.md  TEMPLATE-PLAYBOOK.md  TEST.md  bridge.py  broadcast.sh  claudecode-telegram.sh  doc.md  happy-architecture-report.md  pyproject.toml  test.sh
c/: Makefile  README.md  bridge  bridge.c  claudecode-telegram.sh  setup.sh  test.sh
go/: .gitignore  README.md  e2e_test.go  go.mod  prd.md  progress.txt  test-live.sh
go/cmd/cctg/: main.go  main_test.go
go/internal/app/: app.go  app_test.go
go/internal/files/: files.go  files_test.go
go/internal/hook/: hook.go  hook_test.go
go/internal/markdown/: markdown.go  markdown_test.go
go/internal/sandbox/: mounts.go  mounts_test.go
go/internal/server/: handler.go  handler_test.go
go/internal/telegram/: client.go  client_test.go  media_test.go  parse.go  parse_test.go  reaction_test.go  split.go  split_test.go
go/internal/tmux/: sandbox_test.go  session.go  session_test.go
go/internal/tunnel/: tunnel.go  tunnel_test.go
hooks/: codex-tmux-adapter.py  forward-to-bridge.py  gemini-adapter.py  opencode-adapter.py  send-to-telegram.sh
imessage/: README.md  SPEC.md  bridge.py  pyproject.toml
imessage/hooks/: send-to-imessage.sh
imessage/imessage/: __init__.py  db.py  receiver.py  sender.py  watch.py
imessage/scripts/: claudecode-imessage.sh
imessage/tests/: test.sh
