[project]
name = "claudecode-imessage"
version = "0.1.0"
description = "iMessage bridge for Claude Code workers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

# Optional: fsevents for faster file watching (macOS only)
fsevents = [
    "macfsevents>=0.8; sys_platform == 'darwin'",
]
